--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -6,11 +6,15 @@ services:
   backend:
     image: "modusbox/mojaloop-sdk-mock-dfsp-backend"
     env_file: ./backend.env
+    ports:
+      - "3000:3000"
     depends_on:
       - scheme-adapter
 
   scheme-adapter:
     image: "modusbox/mojaloop-sdk-scheme-adapter:latest"
     env_file: ./scheme-adapter.env
+    ports:
+      - "4000:4000"
     depends_on:
       - redis
