--- a/src/package.json
+++ b/src/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "base64url": "^3.0.1",
     "express": "^4.16.3",
-    "node-fetch": "^2.3.0"
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.7"
   }
 }
