--- a/src/scheme-adapter.env
+++ b/src/scheme-adapter.env
@@ -30,7 +30,7 @@ LOG_INDENT=0
 # The DFSPID of this simulator. The simulator will accept any requests routed to
 # FSPIOP-Destination: $SCHEME_NAME. Other requests will be rejected.
 SCHEME_NAME=default
-DFSP_ID=mojaloop-sdk
+DFSP_ID=mojaloopSdkMockBackend
 
 # REDIS CACHE CONNECTION
 CACHE_HOST=redis
