tweaks after move from modusbox repo

--- a/src/package.json
+++ b/src/package.json
@@ -1,14 +1,20 @@
 {
-  "name": "mock-dfsp-backend",
+  "name": "@mojaloop/mock-dfsp-backend",
   "version": "1.0.0",
-  "description": "A mock DFSP backend for Mojaloop SDK testing",
+  "description": "A mock DFSP backend for Mojaloop SDK testing and learning",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "James Bush",
-  "license": "ISC",
+  "author": "James Bush, ModusBox Inc.",
+  "license": "Apache-2.0",
+  "licenses": [
+    {
+      "type": "Apache-2.0",
+      "url": "http://www.apache.org/licenses/LICENSE-2.0"
+    }
+  ],
   "dependencies": {
     "base64url": "^3.0.1",
     "express": "^4.16.3",
