--- a/src/scheme-adapter.env
+++ b/src/scheme-adapter.env
@@ -55,3 +55,6 @@ AUTO_ACCEPT_QUOTES=true
 
 # set to true to validate ILP, otherwise false to ignore ILP
 CHECK_ILP=true
+
+# set to true to enable test features such as request cacheing and retrieval endpoints
+ENABLE_TEST_FEATURES=false
