Add new env vars to scheme adapter config

--- a/src/scheme-adapter.env
+++ b/src/scheme-adapter.env
@@ -53,8 +53,36 @@ EXPIRY_SECONDS=60
 # confirmation call will be required to complete the final transfer stage.
 AUTO_ACCEPT_QUOTES=true
 
+# if set to false the SDK will not automatically accept a resolved party
+# but will halt the transer after a party lookup response is received. A further
+# cnofirmation call will be required to progress the transfer to quotes state.
+AUTO_ACCEPT_PARTY=false
+
+# when set to true, when sending money via the outbound API, the SDK will use the value
+# of FSPIOP-Source header from the received quote response as the payeeFsp value in the
+# transfer prepare request body instead of the value received in the payee party lookup.
+# This behaviour should be enabled when the SDK user DFSP is in a forex enabled switch
+# ecosystem and expects quotes and transfers to be rerouted by the switch to forex
+# entities i.e. forex providing DFSPs. Please see the SDK documentation and switch
+# operator documentation for more information on forex use cases.
+USE_QUOTE_SOURCE_FSP_AS_TRANSFER_PAYEE_FSP=false
+
 # set to true to validate ILP, otherwise false to ignore ILP
 CHECK_ILP=true
 
 # set to true to enable test features such as request cacheing and retrieval endpoints
 ENABLE_TEST_FEATURES=false
+
+# set to true to mock WSO2 oauth2 token endpoint
+ENABLE_OAUTH_TOKEN_ENDPOINT=false
+OAUTH_TOKEN_ENDPOINT_CLIENT_KEY=test-client-key
+OAUTH_TOKEN_ENDPOINT_CLIENT_SECRET=test-client-secret
+
+# WS02 Bearer Token specific to golden-fsp instance and environment
+WS02_BEARER_TOKEN=7718fa9b-be13-3fe7-87f0-a12cf1628168
+
+# OAuth2 data used to obtain WSO2 bearer token
+OAUTH_TOKEN_ENDPOINT=
+OAUTH_CLIENT_KEY=
+OAUTH_CLIENT_SECRET=
+OAUTH_REFRESH_SECONDS=3600
