--- a/src/scheme-adapter.env
+++ b/src/scheme-adapter.env
@@ -86,3 +86,8 @@ OAUTH_TOKEN_ENDPOINT=
 OAUTH_CLIENT_KEY=
 OAUTH_CLIENT_SECRET=
 OAUTH_REFRESH_SECONDS=3600
+
+# Set to true to respect expirity timestamps
+REJECT_EXPIRED_QUOTE_RESPONSES=false
+REJECT_TRANSFERS_ON_EXPIRED_QUOTES=false
+REJECT_EXPIRED_TRANSFER_FULFILS=false
