--- a/src/scheme-adapter.env
+++ b/src/scheme-adapter.env
@@ -8,39 +8,58 @@ OUTBOUND_LISTEN_PORT=4001
 
 # Enable mutual TLS authentication. Useful when not running in a secure
 # environment, i.e. when you're running it locally against your own implementation.
-MUTUAL_TLS_ENABLED=false
+INBOUND_MUTUAL_TLS_ENABLED=false
+OUTBOUND_MUTUAL_TLS_ENABLED=false
 
-# Enable JWS verification and signing
-VALIDATE_INBOUND_JWS=false
+# Enable verification or incoming JWS signatures
+# Note that signatures will be required on incoming messages
+# and will be validated against a public key.
+VALIDATE_INBOUND_JWS=true
+
+# applicable only if VALIDATE_INBOUND_JWS is "true"
+# allows disabling of validation on incoming PUT /parties/{idType}/{idValue} requests
+VALIDATE_INBOUND_PUT_PARTIES_JWS=true
+
+# Enable signing of outgoing requests
 JWS_SIGN=true
+
+# applicable only if JWS_SIGN is "true"
+# allows disabling of signing on outgoing PUT /parties/{idType}/{idValue} requests
+JWS_SIGN_PUT_PARTIES=true
 
 # Path to JWS signing key (private key of THIS DFSP)
 JWS_SIGNING_KEY_PATH=/jwsSigningKey.key
 JWS_VERIFICATION_KEYS_DIRECTORY=/jwsVerificationKeys
 
 # Location of certs and key required for TLS
-CA_CERT_PATH=./secrets/cacert.pem
-SERVER_CERT_PATH=./secrets/servercert.pem
-SERVER_KEY_PATH=./secrets/serverkey.pem
+IN_CA_CERT_PATH=./secrets/cacert.pem
+IN_SERVER_CERT_PATH=./secrets/servercert.pem
+IN_SERVER_KEY_PATH=./secrets/serverkey.pem
+
+OUT_CA_CERT_PATH=./secrets/cacert.pem
+OUT_CLIENT_CERT_PATH=./secrets/servercert.pem
+OUT_CLIENT_KEY_PATH=./secrets/serverkey.pem
 
 # The number of space characters by which to indent pretty-printed logs. If set to zero, log events
 # will each be printed on a single line.
 LOG_INDENT=0
 
-# The DFSPID of this simulator. The simulator will accept any requests routed to
-# FSPIOP-Destination: $SCHEME_NAME. Other requests will be rejected.
-SCHEME_NAME=default
-DFSP_ID=mojaloopSdkMockBackend
-
 # REDIS CACHE CONNECTION
 CACHE_HOST=redis
 CACHE_PORT=6379
 
-# Switch or DFSP system under test Mojaloop API endpoint
-PEER_ENDPOINT=172.21.0.5:4000
+# SWITCH ENDPOINT
+# The option 'PEER_ENDPOINT' has no effect if the remaining three options 'ALS_ENDPOINT', 'QUOTES_ENDPOINT', 'TRANSFERS_ENDPOINT' are specified.
+PEER_ENDPOINT=172.17.0.3:4000
+#ALS_ENDPOINT=account-lookup-service.local
+#QUOTES_ENDPOINT=quoting-service.local
+#TRANSFERS_ENDPOINT=ml-api-adapter.local
 
-# Simulator backend container endpoint
+# BACKEND ENDPOINT
 BACKEND_ENDPOINT=backend:3000
+
+# FSPID of this DFSP
+DFSP_ID=mojaloopSdkMockBackend
 
 # Secret used for generation and verification of secure ILP
 ILP_SECRET=Quaixohyaesahju3thivuiChai5cahng
@@ -51,7 +70,7 @@ EXPIRY_SECONDS=60
 # if set to false the SDK will not automatically accept all returned quotes
 # but will halt the transfer after a quote response is received. A further
 # confirmation call will be required to complete the final transfer stage.
-AUTO_ACCEPT_QUOTES=true
+AUTO_ACCEPT_QUOTES=false
 
 # if set to false the SDK will not automatically accept a resolved party
 # but will halt the transer after a party lookup response is received. A further
@@ -77,9 +96,10 @@ ENABLE_TEST_FEATURES=false
 ENABLE_OAUTH_TOKEN_ENDPOINT=false
 OAUTH_TOKEN_ENDPOINT_CLIENT_KEY=test-client-key
 OAUTH_TOKEN_ENDPOINT_CLIENT_SECRET=test-client-secret
+OAUTH_TOKEN_ENDPOINT_LISTEN_PORT=6000
 
-# WS02 Bearer Token specific to golden-fsp instance and environment
-WS02_BEARER_TOKEN=7718fa9b-be13-3fe7-87f0-a12cf1628168
+# WSO2 Bearer Token specific to golden-fsp instance and environment
+WSO2_BEARER_TOKEN=7718fa9b-be13-3fe7-87f0-a12cf1628168
 
 # OAuth2 data used to obtain WSO2 bearer token
 OAUTH_TOKEN_ENDPOINT=
@@ -91,3 +111,14 @@ OAUTH_REFRESH_SECONDS=3600
 REJECT_EXPIRED_QUOTE_RESPONSES=false
 REJECT_TRANSFERS_ON_EXPIRED_QUOTES=false
 REJECT_EXPIRED_TRANSFER_FULFILS=false
+
+# Timeout for GET/POST/DELETE - PUT flow processing
+REQUEST_PROCESSING_TIMEOUT_SECONDS=30
+
+# Common Account Lookup System (ALS)
+ALS_ENDPOINT=127.0.0.1:6500
+
+# To allow transfer without a previous quote request, set this value to true.
+# The incoming transfer request should consists of an ILP packet and a matching condition in this case.
+# The fulfilment will be generated from the provided ILP packet, and must hash to the provided condition.
+ALLOW_TRANSFER_WITHOUT_QUOTE=false
